# cockpit

./: .gitignore  AUTHORS.rst  COPYING.BSD-3-clause  INSTALL  INSTALL.rst  MANIFEST.in  README  README.md  README.rst  README.txt  README_sourcecode.txt  __init__.py  cockpit.bat  cockpit.pyw  config.py  depot.py  events.py  example.conf  mockManagers.py  pyproject.toml  setup.py  status.py  test.conf  test_suite.py  wxDeviceSettings.py  wx_select_window_test.py
cockpit/: __init__.py  __main__.py  config.py  depot.py  events.py  status.py
config/: .gitignore  __init__.py  adv.conf  analog.py  b24.conf  cameras.py  deepstar.conf  default.conf  dome.conf  dsp.conf  lights.py  linkam.conf  objectives.conf  omxt.conf  oxfordOMXT.conf  slm.conf  sr470.conf  universal.conf
devices/: advanced-controls.py  advancedControls.py  aerotechAxis.py  andorCameras.py  boulderSLM.py  camera.py  cmosCameras.py  configurator.py  device.py  drawer.py  dsp.py  dummyAnalog.py  dummyCamera.py  dummyExecutors.py  dummyLights.py  dummyXYStage.py  dummyZStage.py  emissionFilterWheel.py  executor.py  executorDevices.py  fw102cEmissionWheel.py  imager.py  laserpower.py  light.py  (+24 more)
devices-oxfordOMXT/: README.txt  configurator.py  configurator.py.bak  deepstar.py  drawer.py  dsp.py  dsp.py.b0rked  dsp.py.bak  executor.py.DISABLED  filterWheel.py  ixonCameras.py  ixonCameras.py.bak  laserpower.py  ni6036e.py  objective.py  picomotor.py  server.py  server.py.bak  slm.py
devices-ucsfOMX/: README.txt  configurator.py  delayGen.py  drawer.py  dsp.py  filterWheel.py  irRemote.py  ixonCameras.py  nanomover.py  ni435x.py  objective.py  powerButtons.py  rotationStage.py  server.py
devices-ucsfOMXT/: README.txt  camera.py  cmosCameras.py  configurator.py  delayGen.py  device.py  drawer.py  dsp.py  emccdCameras.py  objective.py  physikInstrumente.py  picomotor.py  server.py
devices-ucsfOrion/: configurator.py  dmd.py  emissionFilter.py  executor.py  imager.py  lasers.py  leds.py  lights.py  microManager.py  objectives.py  server.py  tirfMirror.py
(+772 files in other folders)
